--- a/src/components/ChatWidget.astro
+++ b/src/components/ChatWidget.astro
@@ -2,7 +2,7 @@
 <script is:inline>
  window.difyChatbotConfig = {
   token: 'qv6qKnS6UG7MYbPg',
-  baseUrl: 'http://dify.37d.jp',
+  baseUrl: 'https://dify.37d.jp',
   inputs: {
     // You can define the inputs from the Start node here
     // key is the variable name
@@ -21,7 +21,7 @@
 </script>
 <script
  is:inline
- src="http://dify.37d.jp/embed.min.js"
+ src="https://dify.37d.jp/embed.min.js"
  id="qv6qKnS6UG7MYbPg"
  defer>
 </script>
