--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ const socialLinks = [
       <!-- Brand -->
       <div>
         <a href="/" class="inline-block mb-4">
-          <img src="/images/logo-gold.svg" alt="株式会社37Design" class="h-7 w-auto" />
+          <img src="/images/logo-gold.svg" alt="株式会社37Design" class="h-7 w-auto" width="128" height="17" />
         </a>
         <p class="text-white/60 text-sm leading-relaxed">
           あなたの会社を1週間でAI企業へ。<br />
