--- a/src/pages/greeting.astro
+++ b/src/pages/greeting.astro
@@ -50,6 +50,9 @@ import ParticleCanvas from "../components/ParticleCanvas.astro";
                 src="/images/ceo-photo.jpg"
                 alt="代表取締役 古田 健"
                 class="w-full h-full object-cover"
+                decoding="async"
+                width="1240"
+                height="1656"
               />
             </div>
             <div class="text-center mt-6">
@@ -121,6 +124,9 @@ import ParticleCanvas from "../components/ParticleCanvas.astro";
                 src="/images/ceo-signature.png"
                 alt="代表取締役 古田 健 サイン"
                 class="h-12 w-auto"
+                decoding="async"
+                width="1366"
+                height="328"
               />
             </div>
           </div>
